# apple-music

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  apple_music.py  cli.py  docker-compose.yml  downloader.py  plan.md  pyproject.toml  technical-primer.md  test_cli.py
proto/: manager.proto  manager_pb2_grpc.py
