[project]
name = "apple-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "m3u8>=6.0.0",
    "mutagen>=1.47.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
